<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:text="@string/register_phone_label" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:background="@null"
                android:hint="@string/register_phone_hint"
                android:inputType="phone"
                android:maxLines="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight"
            android:layout_marginTop="10dip"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:text="@string/register_password_label" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:background="@null"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight"
            android:layout_marginTop="10dip"
            android:background="@color/line" />


        <LinearLayout
            android:id="@+id/layoutVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVerifyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:text="@string/register_verify_label" />

            <EditText
                android:id="@+id/etVerifyCode"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:background="@null"
                android:hint="@string/register_verify_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnSendVerifyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@drawable/button_selector"
                android:padding="5dip"
                android:text="@string/register_btn_sent_verify"
                android:textColor="@color/text_white"
                android:textSize="14dip" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight"
            android:layout_marginTop="10dip"
            android:background="@color/line"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hight"
            android:layout_marginTop="40dip"
            android:background="@drawable/button_selector"
            android:text="@string/register_btn_register"
            android:textColor="@color/text_white" />
    </LinearLayout>

</LinearLayout>