<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">

    <include
        android:id="@+id/tt"
        layout="@layout/common_title" />

    <ScrollView
        android:id="@+id/sc_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tt"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_money_label" />


                <EditText
                    android:id="@+id/et_money"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="0.00"
                    android:inputType="numberDecimal" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_family_label" />

                <TextView
                    android:id="@+id/tv_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_family_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_type_label" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_type_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_payer_label" />

                <TextView
                    android:id="@+id/tv_payer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_payer_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_consumer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_consumer_label" />

                <TextView
                    android:id="@+id/tv_consumer"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_consumer_hint"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_date_label" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_date_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/edit_daybook_remark_label" />

                <EditText
                    android:id="@+id/et_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="48dp"
                    android:layout_toRightOf="@id/tvRemark"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/edit_daybook_remark_hint"
                    android:maxLines="1"
                    android:textColor="@color/text_gray" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:layout_marginTop="10dip"
                android:background="@color/line" />

            <!--图片-->
            <LinearLayout
                android:id="@+id/ll_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_circle_close" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_circle_close" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_circle_close" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_addpic"
                    android:tint="@color/text_gray" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
