<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <com.dawson.aaaccount.util.IconView
            android:id="@+id/tv_icon"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dip" />

        <LinearLayout
            android:id="@+id/ll_phone_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_phone_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dip"
                android:textColorHint="@color/text_gray_light">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_phone_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:textColor="@color/text_white"
                    android:textSize="16dp"
                    android:theme="@style/MyEditText" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/layoutVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_vercode_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_gray_light">

                    <EditText
                        android:id="@+id/et_verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_verify_hint"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:textColor="@color/text_white"
                        android:textColorHint="@color/text_white"
                        android:textSize="16dp"
                        android:theme="@style/MyEditText" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_send_vercode"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/register_btn_sent_verify"
                    android:textColor="@color/text_white"
                    android:textSize="12dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_hight"
                android:layout_marginTop="26dip"
                android:background="@drawable/button_selector"
                android:text="@string/login_btn_login"
                android:textColor="@color/text_white" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/tv_other_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login_txt_qqlogin"
                    android:textColor="@color/text_white" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/tv_other_login"
                    android:background="@color/line" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/tv_other_login"
                    android:background="@color/line" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_qq" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>